--- a/style.css
+++ b/style.css
@@ -17,3 +17,51 @@
     padding: 14px 14px;
     font-size: 20px;
 }
+
+.activa {
+    background-color: gray !important;
+}
+
+.menu a:hover {
+    background-color: red;
+}
+
+.menu .icon {
+    display: none;
+}
+
+@media only screen and (max-width:600px){
+    .menu a {
+        display: none;
+    }
+    .menu .icon {
+        display: block;
+    }
+}
+
+@media only screen and (max-width:600px){
+    .menu.responsive {
+        position: relative;
+    }
+    .menu.responsive .icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+    .menu.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
+}
+
+.footer {
+    width: 100%;
+    height: 7%;
+    color: black;
+    background-color: lightgrey;
+    position: absolute;
+    bottom: 0;
+    padding-top: 2%;
+    text-align: center;
+}
