--- a/style.css
+++ b/style.css
@@ -3,6 +3,12 @@
     padding: 0;
 }
 
+body {
+    min-height: 80vh;
+    position: relative;
+    padding-bottom: 10%;
+}
+
 .menu {
     overflow: hidden;
     background-color: black;
