--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ body {
     margin-bottom: 100px;
 }
 
+
 .contenido p, ul{
     font-size: 25px;
     text-align: justify;
@@ -81,6 +82,7 @@ body {
     font-size: 40px;
     margin-top: 1%;
     text-align: center;
+    font-family: "Oswald", sans-serif;
 }
 
 .contenido .contacto {
@@ -99,6 +101,8 @@ fieldset .formulario {
 
 #principal {
     margin-left: 25%;
+    margin-top: 8%;
+    width: 50%;
 }
 
 .logo{
@@ -136,6 +140,34 @@ fieldset .formulario {
     }
 }
 
+#listaCircuitos {
+    width: 90%;
+}
+
+.circuitos {
+    width: 600px;
+    height: 500px;
+    background-color: lightslategray;
+    display: inline-block;
+    margin-top: 5%;
+    list-style: none;
+}
+
+.circuitos img {
+    width: 100%;
+    height: 400px;
+}
+
+@media only screen and (max-width:600px){
+    .circuitos {
+        width: 100%;
+        height: auto;
+    }
+
+    .circuitos img {
+        height: auto;
+    }
+}
 
 .footer {
     width: 100%;
